fixed border radius on mobile view

--- a/Three-Column-Card/app.css
+++ b/Three-Column-Card/app.css
@@ -2,6 +2,7 @@
 html {
   background-color: rgb(252, 237, 207);
 }
+
 button {
   background-color: white;
   border: 2px solid;
@@ -39,7 +40,6 @@ button:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 2%;
   display: grid;
   grid-template-columns: auto auto auto;
   overflow: auto;
@@ -64,10 +64,39 @@ button:hover {
 
 .card__section--1 {
   background-color: hsl(31, 77%, 52%);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 .card__section--2 {
   background-color: hsl(184, 100%, 22%);
 }
 .card__section--3 {
   background-color: hsl(179, 100%, 13%);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+@media (max-width: 800px) {
+  .card {
+    grid-template-columns: auto;
+    height: 1000px;
+    justify-content: center;
+    margin-top: 200px;
+  }
+  .card__section--1 {
+    background-color: hsl(31, 77%, 52%);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 10px;
+  }
+  .card__section--3 {
+    background-color: hsl(179, 100%, 13%);
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+  button {
+    position: relative;
+    bottom: 0px;
+  }
 }
